--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -37,7 +37,7 @@ ul {
 .fade-in-text {
   font-family: Arial;
   font-size: 60px;
-  font-color: white;
+  color: white;
   animation: fadeIn 5s;
   -webkit-animation: fadeIn 5s;
   -moz-animation: fadeIn 5s;
